2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Relational ops for ulong with switched args.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Equals(ulong) and missing CLSCompliant.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Relational ops for ulong. Fix CoreCompare.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Add constructor and coersion operators
	for ulong.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Add constructor and coersion operators
	for uint.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Implement -1,0,1 props. Don't allocate
	zero array.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Implement IComparable and IEquatable.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Compare and relational ops.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Add.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: GetHashCode.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Equals.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: Added implicit long operator.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	*BigInteger.cs: Added long constructor and coersion operator.

2010-03-04 Rodrigo Kumpera  <rkumpera@novell.com>

	* BigInteger.cs: The DLR version is close to useless. Replaced
	by the initial bits of something that is API compliant.

2009-10-31  Miguel de Icaza  <miguel@novell.com>

	* Add BigInteger.cs from the DLR 0.92, the patch in the directory
	above this one contains the patch against the original
	BigIntegerv2.cs source code.

2009-10-20  Marek Safar <marek.safar@gmail.com>

	* ChangeLog: Added
